# SubLLMinal

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: diag-rtl.ts  live-bidi-test.ts  live-translate.ts  make-portable.ps1  rtl-player-probe.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: settings.ts
src/lib/io/: files.ts
src/lib/llm/: client.ts  presets.ts
src/lib/subtitle/: ass.ts  index.ts  readability.ts  srt.ts  tags.ts  types.ts
src/lib/translate/: bidi.ts  engine.ts  glossary.ts  languages.ts  prompt.ts  tone.ts
src/lib/ui/: modelPicker.ts
tests/: bidi.test.ts  engine.test.ts  glossary.test.ts  llm.test.ts  modelPicker.test.ts  presets.test.ts  prompt.test.ts  readability.test.ts  security.test.ts  subtitle.test.ts  tone.test.ts
tests/fixtures/: sample.ass  sample.srt
