[package]
name = "app"
version = "0.2.0"
description = "Desktop app that translates .srt/.ass subtitles via a local-first (OpenAI-compatible) LLM, preserving timing, styling, and RTL languages."
authors = ["LockhartKZ"]
license = "MIT"
repository = "https://github.com/LockhartKZ/SubLLMinal"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
# Cross-platform "reveal file in the system file manager" (Explorer/Finder/…).
tauri-plugin-opener = "2"
# Automatic subtitle encoding detection (UTF-8/UTF-16 BOM, Windows-125x, etc.)
encoding_rs = "0.8"
chardetng = "0.1"
